fix: distord on hover - prevents instagram rendered canvas from squishing

--- a/src/scss/components/_animations.scss
+++ b/src/scss/components/_animations.scss
@@ -7,6 +7,8 @@
 .instagram-item canvas {
   width: 100% !important;
   height: 100% !important;
+  position: relative;
+  z-index: 99;
   // object-fit: cover !important;
   // aspect-ratio: initial !important;
 }
